﻿
todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system
mac getIpByName liefert name von IPnum


##################################################################
opsi-winst/opsi-script (4.12.3.0) experimental; urgency=low

  * update oswebservice with gzip support (Jan Werner)

-- Detlef Oertel <d.oertel@uib.de>  Wed, 23 Oct 2019:15:00:00 +0200


opsi-winst/opsi-script (4.12.2.3) experimental; urgency=low

  * feature/macos integrated
  * new library uib_state_and_condition:
      Collection of functions that gives info about system states that are relevant for product installations
  * new library uib_state_and_condition:
      Collection of functions that helps to install driver
  * osparser: differences between %CurrentProfileDir% and %UserProfileDir% fixes: #4118
  * osparser: doAktionen: replace constants for every primary section line to avoid
     replacment in secondary sections

-- Detlef Oertel <d.oertel@uib.de>  Thu, 29 Aug 2019:15:00:00 +0200

opsi-winst/opsi-script (4.12.2.2) experimental; urgency=low

  * oswebservice: switch most of log to log_prog
  * oswebservice: code cleanup (remove unused code)

-- Detlef Oertel <d.oertel@uib.de>  Tue, 06 Aug 2019:15:00:00 +0200

opsi-winst/opsi-script (4.12.2.1) experimental; urgency=low

  * oswebservice: sendlog: check max logsize to send via backend_getSystemConfiguration
  * switch to Lazarus 2.0.4

-- Detlef Oertel <d.oertel@uib.de>  Tue, 06 Aug 2019:15:00:00 +0200

opsi-winst/opsi-script (4.12.2.0) experimental; urgency=low

  * oswebservice: switch from indy to synapse
  * osfunc: modified: ShrinkFileToMB
  * oswebservice: sendlog: shrinking enabled again
  * adding changelog.txt to project

-- Detlef Oertel <d.oertel@uib.de>  Thu, 04 Jul 2019:15:00:00 +0200

opsi-winst/opsi-script (4.12.1.5) experimental; urgency=low

  * osdefinedfunctions: delLocalVar : fix removing loopvar after empty loop