@@ -7,7 +7,7 @@ object CentralForm: TCentralForm
   HorzScrollBar.Visible = False
   VertScrollBar.Visible = False
   Caption = '  opsi - script'
-  ClientHeight = 521
+  ClientHeight = 541
   ClientWidth = 966
   Font.CharSet = ANSI_CHARSET
   Font.Color = clBlack
@@ -18,13 +18,14 @@ object CentralForm: TCentralForm
   Menu = MainMenu1
   OnClose = FormClose
   OnCreate = FormCreate
+  OnWindowStateChange = FormWindowStateChange
   Position = poScreenCenter
   LCLVersion = '2.0.4.0'
   object LabelWinstVersion: TLabel
     Left = 177
-    Height = 9
+    Height = 10
     Top = 2
-    Width = 62
+    Width = 75
     Alignment = taCenter
     Caption = 'LabelWinstVersion'
     Font.Color = clBlack
@@ -36,9 +37,9 @@ object CentralForm: TCentralForm
   end
   object Label6: TLabel
     Left = 185
-    Height = 9
+    Height = 10
     Top = 10
-    Width = 62
+    Width = 75
     Alignment = taCenter
     Caption = 'LabelWinstVersion'
     Font.Color = clBlack
@@ -50,7 +51,7 @@ object CentralForm: TCentralForm
   end
   object Memo1: TMemo
     Left = 0
-    Height = 268
+    Height = 288
     Top = 253
     Width = 966
     Align = alClient
@@ -127,8 +128,8 @@ object CentralForm: TCentralForm
     BorderWidth = 1
     BorderStyle = bsSingle
     Caption = 'Log-View:'
-    ClientHeight = 38
-    ClientWidth = 962
+    ClientHeight = 42
+    ClientWidth = 966
     TabOrder = 2
     object LabelActivity: TLabel
       Left = 752
@@ -320,7 +321,7 @@ object CentralForm: TCentralForm
     end
     object Edit1: TEdit
       Left = 92
-      Height = 26
+      Height = 22
       Top = 22
       Width = 503
       TabOrder = 0
@@ -356,12 +357,12 @@ object CentralForm: TCentralForm
     end
     object ComboBox1: TComboBox
       Left = 92
-      Height = 26
+      Height = 21
       Top = 23
       Width = 577
       Color = clNone
       Enabled = False
-      ItemHeight = 18
+      ItemHeight = 0
       TabOrder = 3
       Text = 'ComboBox1'
       Visible = False
@@ -387,7 +388,7 @@ object CentralForm: TCentralForm
     end
     object Edit2: TEdit
       Left = 93
-      Height = 26
+      Height = 22
       Top = 7
       Width = 571
       TabOrder = 0
@@ -407,8 +408,8 @@ object CentralForm: TCentralForm
       ChildSizing.ShrinkVertical = crsScaleChilds
       ChildSizing.Layout = cclLeftToRightThenTopToBottom
       ChildSizing.ControlsPerLine = 2
-      ClientHeight = 37
-      ClientWidth = 260
+      ClientHeight = 50
+      ClientWidth = 256
       Color = clMedGray
       Columns = 2
       Font.Color = clBlack
@@ -420,7 +421,7 @@ object CentralForm: TCentralForm
       TabOrder = 1
       object RadioButtonNewLogfile: TRadioButton
         Left = 6
-        Height = 25
+        Height = 38
         Top = 6
         Width = 115
         Caption = 'New'
@@ -437,9 +438,9 @@ object CentralForm: TCentralForm
       end
       object RadioButtonAppendLogfile: TRadioButton
         Left = 121
-        Height = 25
+        Height = 38
         Top = 6
-        Width = 133
+        Width = 129
         Caption = 'Append'
         Enabled = False
         Font.Color = clBlack
